--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -14,7 +14,7 @@
   <br></br>
 
   <%Owner.all.each do |owner|%>
-  <input type="checkbox" name="pet[owner_id]" id="<%=owner.id%>" value="<%=owner.id%>" <%= 'checked' if @pet.owner == owner %>> <%=owner.name%></input>
+  <input type="checkbox" name="pet[owner_id]" id="<%=owner.id%>" value="<%=owner.id%>" <%='checked' if @pet.owner.id == owner,id %>> <%=owner.name%></input>
   <%end%>
 
   <br></br>
@@ -24,6 +24,5 @@
   <label>Owner Name:</label>
   <input type="text" name="owner[name]" id="owner_name" ></input>
   <br></br>
-
   <input type="submit" value="Update Pet"></input>
 </form>
